<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="app_name" translatable="false">VLC</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_name_desc">Name (desc)</string>
    <string name="sortby_filename">File name</string>
    <string name="sortby_filename_desc">File name (desc)</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_artist_name_desc">Artist name (desc)</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_album_name_desc">Album name (desc)</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_length_desc">Length (desc)</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_date_desc">Date (desc)</string>
    <string name="sortby_last_modified_date">Recently added</string>
    <string name="sortby_last_modified_date_desc">Recently added (desc)</string>
    <string name="sortby_number">Nb tracks</string>
    <string name="sortby_number_desc">Nb tracks (desc)</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="playback">Playback</string>
    <string name="playback_controls">Playback controls</string>
    <string name="medialibrary_scan">Media library scan</string>
    <string name="Medialibrary_progress">Media library scanning progress updates</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="video_app_switch_title">Background/PiP mode</string>
    <string name="video_app_switch_summary">Select VLC behavior when you switch to other application from video playback</string>
    <string name="play_pip_title">Play videos in Picture-in-picture mode</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="append">Append</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="resume_playback_short_title">Resume playback</string>
    <string name="resume_playback_long_title"> Resume playback of last playlist</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="set_song_question">Set \'%1$s\' as ringtone?</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_delete_several_media">Delete these %1$d media?</string>
    <string name="confirm_delete_folder">Delete the folder \'%1$s\' and all its contents?</string>
    <string name="confirm_delete_playlist">Delete playlist \'%1$s\'?</string>
    <string name="confirm_remove_from_playlist">Remove \'%1$s\' from playlist?</string>
    <string name="confirm_remove_from_playlist_anonymous">Remove from playlist?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="info_title">VLC</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_number">Unknown number of Tracks</string>
    <string name="songs">Songs</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="directories">Directories</string>
    <string name="refresh">Refresh</string>
    <string name="open_mrl">Stream</string>
    <string name="playback_speed_title">Save Playback Speed</string>
    <string name="playback_speed_summary">Remember the playback speed you set</string>
    <string name="about">About</string>
    <string name="preferences">Settings</string>
    <string name="add_custom_path">Add a custom path</string>
    <string name="add_custom_path_description">Enter additional custom directory to scan:</string>
    <string name="dev_hardware_decoder">Advanced hardware decoder</string>
    <string name="dev_hardware_decoder_summary">Force hardware decoder, for advanced users only</string>
    <string name="subtitle_text_encoding">Subtitle text encoding</string>
    <string name="daynight_title">DayNight mode</string>
    <string name="interface_prefs_screen">Interface</string>
    <string name="video_prefs_category">Video</string>
    <string name="video_min_group_length_title">Group videos</string>
    <string name="media_fast_seek">Fast seek</string>
    <string name="media_fast_seek_summary">Seeking in a media is faster but less accurate</string>
    <string name="video_transition_title">Videos transition</string>
    <string name="video_transition_summary">Show new video title on transition</string>
    <string name="media_seen">Show seen video marker</string>
    <string name="media_seen_summary">Mark a video as seen when you play it until the end</string>
    <string name="force_play_all_summary">Play all videos, starting with the one you clicked on</string>
    <string name="force_play_all_title">Video playlist mode</string>
    <string name="save_brightness_summary">Remember brightness level in video player</string>
    <string name="save_brightness_title">Save brightness level for video</string>
    <string name="save_audiodelay_summary">Save individual audio delay for each video</string>
    <string name="save_audiodelay_title">Save audio delay</string>
    <string name="enable_brightness_gesture_title">Brightness gesture</string>
    <string name="enable_brightness_gesture_summary">Control brightness by gesture during video playback</string>
    <string name="enable_volume_gesture_title">Volume gesture</string>
    <string name="enable_volume_gesture_summary">Control volume by gesture during video playback</string>
    <string name="enable_seek_buttons">Seek buttons</string>
    <string name="enable_seek_buttons_summary">Show rewind and forward buttons on the video interface</string>
    <string name="enable_double_tap_seek_title">Double tap to seek</string>
    <string name="enable_double_tap_seek_summary">Double tap on screen edges to seek by 10 seconds</string>
    <string name="popup_keepscreen_title">Keep screen ON in Pop-Up mode</string>
    <string name="popup_keepscreen_summary">Always keep screen ON while Pop-Up is displayed, even if video is paused.</string>
    <string name="subtitles_prefs_category">Subtitles</string>
    <string name="subtitles_size_title">Subtitles Size</string>
    <string name="subtitles_color_title">Subtitles Color</string>
    <string name="subtitles_background_title">Subtitles Background</string>
    <string name="audio_prefs_category">Audio</string>
    <string name="audio_boost_title">Audio-boost</string>
    <string name="audio_boost_summary">Allow volume up to 200%</string>
    <string name="headset_prefs_category">Headset</string>
    <string name="enable_headset_detection">Detect headset</string>
    <string name="enable_headset_detection_summary">Detect headset insertion and removal</string>
    <string name="enable_play_on_headset_insertion">Resume on headset insertion</string>
    <string name="enable_play_on_headset_insertion_summary">Pause otherwise</string>
    <string name="aout">Audio output</string>
    <string name="aout_summary">Change the method that VLC uses to output audio.</string>
    <string name="audio_ducking_title">Lower VLC volume on notifications</string>
    <string name="audio_ducking_summary">Helps to hear audio notifications, navigation instructions or assistant talking</string>
    <string name="controls_prefs_category">Controls</string>
    <string name="performance_prefs_category">Performance</string>
    <string name="chroma_format">Force video chroma</string>
    <string name="chroma_format_summary">RGB 32-bit: default chroma\nRGB 16-bit: better performance but lower quality\nYUV: best performance but does not work on all devices. Android 2.3 and later only.</string>
    <string name="deblocking">Deblocking filter settings</string>
    <string name="deblocking_summary">Change the deblocking filter settings. Could improve video quality. Advanced users only.</string>
    <string name="enable_frame_skip">Frame skip</string>
    <string name="enable_frame_skip_summary">Speed up decoding but could lower video quality.</string>
    <string name="enable_time_stretching_audio">Time-stretching audio</string>
    <string name="enable_time_stretching_audio_summary">Speed up and slow down audio without changing the pitch (requires a fast device).</string>
    <string name="advanced_prefs_category">Advanced</string>
    <string name="auto_rescan">Auto rescan</string>
    <string name="auto_rescan_summary">Automatically scan device for new or deleted media at application startup</string>
    <string name="clear_media_db">Clear media database</string>
    <string name="clear_history">Clear history</string>
    <string name="set_locale">Set locale</string>
    <string name="set_locale_detail">Leave blank to reset</string>
    <string name="network_caching">Network caching value</string>
    <string name="network_caching_summary">The amount of time to buffer network media (in ms). Does not work with hardware decoding. Leave blank to reset.</string>
    <string name="resume_playback_title">Resume playback after a call</string>
    <string name="resume_playback_summary">Stay in pause otherwise</string>
    <string name="blurred_cover_background_title">Blurred cover background</string>
    <string name="blurred_cover_background_summary">Blurred cover in audio player background</string>
    <string name="quit">Quit and restart application</string>
    <string name="browser_show_all_title">Show all files</string>
    <string name="developer_prefs_category">Developer</string>
    <string name="enable_verbose_mode">Verbose</string>
    <string name="enable_verbose_mode_summary">Increase the verbosity (logcat)</string>
    <string name="debug_logs">Debug logs</string>
    <string name="network_browsing">Local Network</string>
    <string name="confirm_resume_title">Resume played videos</string>
    <string name="tv_ui_title">Android TV interface</string>
    <string name="tv_ui_summary">Change UI to TV adapted theme</string>
    <string name="chroma_format_default" translatable="false">RV16</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download_subtitles">Download subtitles</string>
    <string name="preferences_languages_download">Subtitles languages</string>
    <string name="list_languages_download_summary">Languages to download when fetching subtitles</string>
    <string name="list_languages_download_title">Subtitles download languages</string>
    <string name="audio_digital_title">Digital audio output (passthrough)</string>
    <string name="audio_task_cleared_title">Stop on application swipe</string>
    <string name="audio_task_cleared_summary">Stop playback when application is dismissed</string>
    <string name="cast_option_title">Cast medias on another screen</string>
    <string name="popup_force_legacy_title">Use custom Picture-in-Picture popup</string>
    <string name="popup_force_legacy_summary">Use custom Picture-in-Picture resizable popup</string>
</resources>