<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="video_category"
    android:title="@string/video_prefs_category">

    <ListPreference
        android:defaultValue="6"
        android:entries="@array/video_min_group_length_list"
        android:entryValues="@array/video_min_group_length_values"
        android:key="video_min_group_length"
        android:persistent="true"
        android:summary="@string/video_min_group_length_summary"
        android:title="@string/video_min_group_length_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="media_seen"
        android:summary="@string/media_seen_summary"
        android:title="@string/media_seen" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="force_list_portrait"
        android:summary="@string/force_list_portrait_summary"
        android:title="@string/force_list_portrait" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="save_brightness"
        android:summary="@string/save_brightness_summary"
        android:title="@string/save_brightness_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="save_individual_audio_delay"
        android:summary="@string/save_audiodelay_summary"
        android:title="@string/save_audiodelay_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="media_fast_seek"
        android:summary="@string/media_fast_seek_summary"
        android:title="@string/media_fast_seek" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="video_transition_show"
        android:summary="@string/video_transition_summary"
        android:title="@string/video_transition_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="popup_force_legacy"
        android:summary="@string/popup_force_legacy_summary"
        android:title="@string/popup_force_legacy_title" />

    <PreferenceCategory android:title="@string/controls_prefs_category">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="audio_boost"
            android:summary="@string/audio_boost_summary"
            android:title="@string/audio_boost_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="force_play_all"
            android:summary="@string/force_play_all_summary"
            android:title="@string/force_play_all_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_volume_gesture"
            android:summary="@string/enable_volume_gesture_summary"
            android:title="@string/enable_volume_gesture_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_brightness_gesture"
            android:summary="@string/enable_brightness_gesture_summary"
            android:title="@string/enable_brightness_gesture_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="dialog_confirm_resume"
            android:summary="@string/confirm_resume_summary"
            android:title="@string/confirm_resume_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_double_tap_seek"
            android:summary="@string/enable_double_tap_seek_summary"
            android:title="@string/enable_double_tap_seek_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_seek_buttons"
            android:summary="@string/enable_seek_buttons_summary"
            android:title="@string/enable_seek_buttons" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="popup_keepscreen"
            android:summary="@string/popup_keepscreen_summary"
            android:title="@string/popup_keepscreen_title" />
    </PreferenceCategory>

</PreferenceScreen>
