<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="ui_category"
    android:title="@string/interface_prefs_screen">

    <ListPreference
        android:defaultValue="-1"
        android:key="app_theme"
        android:title="@string/daynight_title"
        android:entries="@array/daynight_mode_entries"
        android:entryValues="@array/daynight_mode_values" />

    <CheckBoxPreference
        android:key="tv_ui"
        android:summary="@string/tv_ui_summary"
        android:title="@string/tv_ui_title" />

    <ListPreference
        android:defaultValue=""
        android:key="set_locale"
        android:title="@string/set_locale" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="resume_playback"
        android:summary="@string/resume_playback_summary"
        android:title="@string/resume_playback_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="browser_show_all_files"
        android:summary="@string/browser_show_all_summary"
        android:title="@string/browser_show_all_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="blurred_cover_background"
        android:summary="@string/blurred_cover_background_summary"
        android:title="@string/blurred_cover_background_title" />

    <PreferenceCategory
        android:title="@string/video"
        android:key="ui_video_category">

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/video_min_group_length_list"
            android:entryValues="@array/video_min_group_length_values"
            android:key="video_min_group_length"
            android:persistent="true"
            android:summary="@string/video_min_group_length_summary"
            android:title="@string/video_min_group_length_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="media_seen"
            android:summary="@string/media_seen_summary"
            android:title="@string/media_seen" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="force_play_all"
            android:summary="@string/force_play_all_summary"
            android:title="@string/force_play_all_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="force_list_portrait"
            android:summary="@string/force_list_portrait_summary"
            android:title="@string/force_list_portrait" />
    </PreferenceCategory>
</PreferenceScreen>
