<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/directory_view_play_all"
        android:title="@string/play_all" />
    <item
        android:id="@+id/directory_view_play_audio"
        android:title="@string/play_as_audio" />
    <item
        android:id="@+id/directory_view_append"
        android:title="@string/append" />
    <item
        android:id="@+id/directory_view_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/directory_view_info"
        android:title="@string/info" />
    <item
        android:id="@+id/directory_view_add_playlist"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/directory_subtitles_download"
        android:title="@string/download_subtitles" />
</menu>