<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/video_list_play_from_start"
        android:title="@string/play_from_start"
        android:visible="false" />
    <item
        android:id="@+id/video_list_play_all"
        android:title="@string/play_all" />
    <item
        android:id="@+id/video_list_append"
        android:title="@string/append" />
    <item
        android:id="@+id/video_list_play_audio"
        android:title="@string/play_as_audio" />
    <item
        android:id="@+id/video_list_info"
        android:title="@string/info" />
    <item
        android:id="@+id/video_list_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/video_download_subtitles"
        android:title="@string/download_subtitles" />
</menu>