<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/scrollable_group"
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_video"
        android:title="@string/video"
        android:icon="?attr/ic_menu_video" />

    <item
        android:id="@+id/nav_audio"
        android:title="@string/audio"
        android:icon="?attr/ic_menu_audio" />

    <item
        android:id="@+id/nav_directories"
        android:title="@string/directories"
        android:icon="?attr/ic_menu_folder" />

    <item
        android:id="@+id/nav_network"
        android:title="@string/network_browsing"
        android:icon="?attr/ic_menu_network" />

    <item
        android:id="@+id/nav_mrl"
        android:title="@string/open_mrl"
        android:icon="?attr/ic_menu_openmrl" />

    <item
        android:id="@+id/nav_history"
        android:title="@string/history"
        android:icon="?attr/ic_menu_history" />
    </group>
    <group android:id="@+id/fixed_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/preferences"
            android:icon="?attr/ic_menu_preferences" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="?attr/ic_menu_cone" />
    </group>
</menu>