<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ml_menu_open_mrl"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/open_mrl" />
    <item
        android:title="@string/sortby"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:id="@+id/ml_menu_sortby">
        <menu>
            <item
                android:id="@+id/ml_menu_sortby_name"
                android:title="@string/sortby_name" />
            <item
                android:id="@+id/ml_menu_sortby_length"
                android:title="@string/sortby_length" />
        </menu>
    </item>
    <item
        android:id="@+id/ml_menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh" />
    <item
        android:id="@+id/ml_menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences" />
    <item
        android:id="@+id/ml_menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />
</menu>
