<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vlc="http://schemas.android.com/apk/res-auto" >

    <item
        android:orderInCategory="1"
        android:id="@+id/ml_menu_renderers"
        android:icon="@drawable/ic_am_renderer_normal_w"
        android:title="@string/cast_option_title"
        vlc:showAsAction="always|collapseActionView"
        android:visible="false"/>

    <item
            android:orderInCategory="1"
            android:id="@+id/ml_menu_filter"
            android:icon="@drawable/ic_menu_search"
            vlc:actionViewClass="androidx.appcompat.widget.SearchView"
            android:title="@string/searchable_hint"
            vlc:showAsAction="always|collapseActionView"/>
    <item
        android:orderInCategory="2"
        android:id="@+id/ml_menu_last_playlist"
        android:icon="@drawable/ic_menu_lastplaylist"
        android:title="@string/last_playlist"
        vlc:showAsAction="ifRoom|collapseActionView"
        android:visible="false"/>
    <item
        android:orderInCategory="2"
        android:title="@string/sortby"
        android:icon="@drawable/ic_menu_sort"
        android:id="@+id/ml_menu_sortby"
        vlc:showAsAction="ifRoom|collapseActionView"
        android:visible="false">
        <menu>
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_name"
                android:title="@string/sortby_name" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_filename"
                android:title="@string/sortby_filename" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_artist_name"
                android:title="@string/sortby_artist_name"
                android:visible="false" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_album_name"
                android:title="@string/sortby_album_name"
                android:visible="false" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_length"
                android:title="@string/sortby_length"
                android:visible="false" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_date"
                android:title="@string/sortby_date"
                android:visible="false" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_last_modified"
                android:title="@string/sortby_last_modified_date"
                android:visible="false" />
            <item
                android:orderInCategory="2"
                android:id="@+id/ml_menu_sortby_number"
                android:title="@string/sortby_number"
                android:visible="false" />
        </menu>
    </item>
    <item
            android:orderInCategory="3"
            android:id="@+id/ml_menu_refresh"
            android:icon="@drawable/ic_menu_refresh"
            vlc:showAsAction="ifRoom|collapseActionView"
            android:title="@string/refresh"/>
    <item
        android:orderInCategory="3"
        android:id="@+id/ml_menu_custom_dir"
        android:title="@string/add_custom_path"
        android:contentDescription="@string/add_custom_path_description"
        android:visible="false"/>
    <item
        android:orderInCategory="3"
        android:title="@string/clear_history"
        android:visible="false"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:id="@+id/search_clear_history" />
</menu>